Fix z-index (fix #2291)

--- a/src/style/comment/comment.scss
+++ b/src/style/comment/comment.scss
@@ -503,5 +503,5 @@ body.dark .panel-area .bb-comment {
   top: -72px !important;
 }
 .v-wrap #comment {
-  z-index: 1 !important;
+  z-index: 21 !important;
 }
